tools/tests/errors/surf_type_08.ki
# type/operator: a List must be indexed by an Integer, not a String
discard [1, 2, 3]["a"]
